# toy-payments

./: Cargo.toml  README.md  accounts.csv  transactions.csv
docs/: custom-review.md  notes.md
src/: bankrecords.rs  client.rs  errors.rs  main.rs  processor.rs  transaction.rs
