[package]
name = "toy-payments"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
env_logger = "0.11.10"
log = "0.4.29"
rust_decimal = "1.42.0"
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.18.0"
tempfile = "3.8.0"
